--- a/samples/multi-assembly/pom.xml
+++ b/samples/multi-assembly/pom.xml
@@ -106,11 +106,11 @@
             <phase>package</phase>
           </execution>
           <execution>
-            <id>docker-run</id>
+            <id>integration-test</id>
             <goals>
               <goal>start</goal>
+              <goal>stop</goal>
             </goals>
-            <phase>verify</phase>
           </execution>
         </executions>
       </plugin>
