--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -125,6 +125,32 @@
 
       </plugins>
     </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>com.github.ekryd.sortpom</groupId>
+        <artifactId>sortpom-maven-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          <keepBlankLines>true</keepBlankLines>
+          <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
+          <sortDependencies>groupId,artifactId,scope</sortDependencies>
+          <sortModules>true</sortModules>
+          <sortPlugins>groupId,artifactId,scope</sortPlugins>
+          <sortProperties>true</sortProperties>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>sort</goal>
+            </goals>
+            <phase>verify</phase>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+
   </build>
 
   <profiles>
@@ -139,7 +165,7 @@
       </properties>
     </profile>
     <profile>
-      <id>java1</id>
+      <id>java11</id>
       <activation>
         <jdk>[11,]</jdk>
       </activation>
