--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,7 @@
       <version>${maven.version}</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
@@ -303,6 +304,7 @@
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.2.0</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
@@ -351,7 +353,31 @@
       </plugins>
 
     </pluginManagement>
+
     <plugins>
+
+      <plugin>
+        <groupId>com.github.ekryd.sortpom</groupId>
+        <artifactId>sortpom-maven-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          <keepBlankLines>true</keepBlankLines>
+          <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
+          <sortDependencies>groupId,artifactId,scope</sortDependencies>
+          <sortModules>true</sortModules>
+          <sortPlugins>groupId,artifactId,scope</sortPlugins>
+          <sortProperties>true</sortProperties>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>sort</goal>
+            </goals>
+            <phase>verify</phase>
+          </execution>
+        </executions>
+      </plugin>
 
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -622,6 +648,7 @@
         </plugins>
       </build>
     </profile>
+
     <profile>
       <id>doc-pdf</id>
       <build>
@@ -645,6 +672,7 @@
         </plugins>
       </build>
     </profile>
+
     <profile>
       <id>unix-test</id>
       <activation>
@@ -656,6 +684,7 @@
         <excludedGroups></excludedGroups>
       </properties>
     </profile>
+
     <profile>
       <id>sonar</id>
       <properties>
