--- a/it/pom.xml
+++ b/it/pom.xml
@@ -20,6 +20,7 @@
 
   <modules>
     <module>builder</module>
+    <module>buildx-dockerfile</module>
     <module>docker-compose</module>
     <module>dockerfile</module>
     <module>dockerignore</module>
